# ferrocrawl

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  serverless.yml
.github/workflows/: ci.yml  deploy.yml
scripts/: setup-ssm.sh
src/: config.rs  error.rs  lib.rs  local.rs  main.rs
src/extractor/: llm_extractor.rs  mod.rs
src/routes/: extract.rs  mod.rs  scrape.rs
src/scraper/: content_cleaner.rs  mod.rs  static_scraper.rs
